@@ -55,6 +55,13 @@ limitations under the License.
     </profiles>
 
     <dependencies>
+        <!-- graphical interface -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>25</version>
+        </dependency>
+
         <!-- vector database -->
         <dependency>
             <groupId>io.qdrant</groupId>
@@ -234,6 +241,18 @@ limitations under the License.
                         <classpath/>
                         <argument>${exec.mainClass}</argument>
                     </arguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>io.github.jjweston.omegacodex.QueryGui</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
